# Proyecto

./: .env  .gitignore  CMakeLists.txt  Diego Therian y Maricon  README.md  amr_program.py  bridge.py  camera_program.py  cap_spawn.py  cobot_program.py  conveyor_movement.py  db_structure.sql  delta_program.py  install.sh  nav2_1.3.11_migration.md  package.xml  pick_and_place.py  queries.sql  requirements.txt  robodk_bridge_guide.md  robodk_connection_guide.md  sensors_program.py
MQTT/: MqttListener.py  config.py  mqtt_controller.py
base_de_datos/: consultas.sql  db_structure.sql
c/: .gitignore  Diagramas_flujo.md  ENTREGABLE_PR2.md  Pruebas_sistema.md  README.md  ROBODK_PYTHON_REQS.md  RUBRICA_PR2.md  SETUP_RUST_ESP.md  SISTEMA.md  Tareas_proyecto.md  gen_docx.py  gen_mqtt_comparison_pdf.py  mqtt_messages.md  robodk_log.txt  run_all.ps1  run_all.sh  sim_delta.py
c/.claude/: settings.json  settings.local.json
c/documentacion/: Pruebas_sistema.md  SISTEMA.md  iteraciones.md  mqtt_messages.md
c/mqtt_db_bridge/: .env.example  Cargo.toml  Pruebas.md  schema.sql
c/mqtt_db_bridge/src/: bridge.rs
c/python_bridge/: MqttListener.py  RobotController.py  config.py  requirements.txt
c/src/: config.rs  control_state.rs  emergency_task.rs  logic_task.rs  main.rs  mqtt_manager.rs  vision_task.rs  wifi_connection.rs  wifi_manager.rs
comunicaciones/: .gitignore  README.md
comunicaciones/c/: Cargo.toml  README.md  sdkconfig.defaults
comunicaciones/c/documentacion/: SETUP_RUST_ESP.md  SISTEMA.md
comunicaciones/c/src/: control_state.rs  emergency_task.rs  wifi_manager.rs
config/: gz_bridge.yaml  nav2_params.yaml
d/: IMPLEMENTACION.md  PRUEBAS.md  run_demo.ps1  run_demo.sh
d/bridge/: .env  .env.example  Cargo.toml
d/bridge/src/: main.rs
d/db/: schema.sql
d/esp32/: Cargo.toml  sdkconfig.defaults
d/esp32/.cargo/: config.toml
d/esp32/src/: config.rs  logic_task.rs  main.rs  mqtt_manager.rs  state.rs  wifi_connection.rs  wifi_manager.rs
d/robodk/: CobotController.py  MqttListener.py  RobotController.py  config.py
database/: bridge.py  queries.sql
launch/: bringup.launch.py  simulation.launch.py
models/Station/: estacion.glb  model.config  model.sdf
navegacion/: CMakeLists.txt  README.md
navegacion/config/: gz_bridge.yaml  nav2_params.yaml  slam_toolbox_params.yaml
navegacion/launch/: bringup.launch.py
navegacion/maps/: warehouse.pgm  warehouse.yaml
navegacion/scada/: README.md  config.py  dialogs.py  main.py  main_window.py  mqtt_client.py  requirements.txt  simulator.py  state.py  widgets.py
navegacion/scripts/: cap_color_calibrator.py  cap_color_detector.py  manual_goal_sender.py  robodk_bridge.py
navegacion/urdf/include/: mir_v1.urdf.xacro
programas_robodk/: amr_program.py  camera_program.py  cap_spawn.py  cobot_program.py  config.py  delta_program.py  init_reset.py  mqtt_controller.py
rviz/: nav2_view.rviz
scripts/: colors.yaml  robodk_bridge.py  robodk_position_sender.py
urdf/: mir.urdf.xacro  mir_sim.urdf.xacro
urdf/include/: common_properties.urdf.xacro  mir.gz.xacro  sick_s300.urdf.xacro
worlds/: station.sdf  warehouse.sdf
