[package]
name = "bridge_demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bridge_demo"
path = "src/main.rs"

[dependencies]
anyhow          = "1"
dotenvy         = "0.15"
rumqttc         = "0.24"
serde_json      = "1"
tokio           = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tokio-postgres  = "0.7"
tracing         = "0.1"
tracing-subscriber = "0.3"
