[package]
name = "demo_integracion"
version = "0.1.0"
authors = ["jusue"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "demo_integracion"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[patch.crates-io]
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys.git" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git" }

[dependencies]
log          = "0.4"
esp-idf-svc  = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync", "alloc"] }
esp-idf-hal  = "0.46.2"
esp-idf-sys  = { version = "0.37.2", features = ["binstart"] }
anyhow       = "1.0"
embedded-svc = "0.29"
embassy-time = { version = "0.5.1", features = ["generic-queue-8"] }
serde_json   = "1.0"

[build-dependencies]
embuild = "0.33"
